# DistributedDatabase

./: .gitignore  README.md  docker-compose.yml  envoy.yaml  init.sql
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/proto/: database_service.proto
backend/src/: server.cc
frontend/: .dockerignore  dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/Page/: Home.jsx  Home.module.css  Modal.jsx  Modal.module.css  RecordsTable.jsx  RecordsTable.module.css
frontend/src/components/: Button.jsx  Button.module.css
frontend/src/proto/: database_service_grpc_web_pb.js  database_service_pb.js
